<resources>
    <string name="app_name">Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Список задач</string>
    <string name="second_fragment_label">Добавить задачу</string>
    <string name="update_fragment_label">Редактировать</string>
    <string name="choose_contact_fragment_label">Выбрать из контактов</string>

    <string name="enter_name">Введите название задачи</string>
    <string name="enter_desc">Введите описание задачи</string>
    <string name="enter_creator">Создатель задачи</string>
    <string name="enter_creator_phone">Номер телефона</string>
    <string name="enter_time">Дата выполнения</string>
    <string name="pick_time">Выбрать время</string>

    <string name="name">Name</string>
    <string name="desc">Description Description DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription Description Description Description Description Description Description</string>
    <string name="date">Date</string>
    <string name="creator">Creator</string>
    <string name="phone">Phone</string>

    <string name="next">Next</string>
    <string name="add">Добавить</string>
    <string name="choose">Выбрать из контактов</string>

    <string name="here_will_be">Here will be list of your tasks</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>