<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.AddTaskFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/task_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_creator"

                android:hint="@string/enter_creator"
                android:inputType="text"

                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/task_creator_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_creator_phone"

                android:hint="@string/enter_creator_phone"
                android:inputType="text"

                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btn_contacts_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_blue"
                android:text="@string/choose"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_name"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_desc"

                android:hint="@string/enter_desc"
                android:inputType="text"

                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_time"

                android:hint="@string/enter_time"
                android:inputType="text"

                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="20sp" />
        </LinearLayout>
        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>