<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="15dp"
    android:paddingHorizontal="25dp"
    android:id="@+id/row_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_rounded_bg"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/name_and_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:buttonTint="@color/main_blue"
            android:layout_alignStart="@id/name_and_desc" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="5dp"
            android:layout_alignEnd="@id/name_and_desc"
            android:background="@drawable/ic_baseline_share_24" />

        <!-- android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"-->
        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/name_and_desc"
            android:layout_marginTop="25dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/phone_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/name_and_desc"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="7dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/creator_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/phone_view"
            android:layout_below="@id/name_and_desc"
            android:layout_marginTop="25dp"
            android:text="@string/creator"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </RelativeLayout>

</LinearLayout>